# mypy

./: .gitignore  .pre-commit-config.yaml  CentOS-Queen.repo  README.md  collections_demo.py  log.py  pyproject.toml
SomeAlgorithms/: BTree.py  CalSalary.py  Expression.py  Hanoi.py  Joseph.py  Matrix.py  Matrix02.py  Rochambeau.py  backtrace.py  calculator_for_seq_num.py
design_patterns/: singletion.py  stragedy.py
django_proj/dj-ninja-pi/: README.md  manage.py  pyproject.toml  pytest.ini
django_proj/dj-ninja-pi/api/: models.py  urls.py  utils.py  views.py  ws.py
django_proj/dj-ninja-pi/api/migrations/: 0001_initial.py
django_proj/dj-ninja-pi/api/tests/: test_api.py  tests.py
django_proj/dj-ninja-pi/wxdjsys/: asgi.py  settings.py  urls.py  wsgi.py
django_proj/dj-ninja-pi/wxdjsys/envs/: default.py  dev.py  ut.py
django_proj/django-restful/: Pipfile
django_proj/django-restful/vcp/: db.sqlite3  manage.py  nginx-django.conf  uwsgi.ini
django_proj/django-restful/vcp/lottery/: admin.py  models.py  urls.py  views.py
django_proj/django-restful/vcp/lottery/migrations/: 0001_initial.py  0002_auto_20190215_0847.py  0003_auto_20190215_0852.py  0004_auto_20190217_0841.py
django_proj/django-restful/vcp/lottery/test/: test_views.py
django_proj/django-restful/vcp/oauth/: models.py  serializers.py  urls.py  views.py
django_proj/django-restful/vcp/oauth/migrations/: 0001_initial.py  0002_auto_20190210_0219.py
django_proj/django-restful/vcp/oauth/test/: tests.py
django_proj/django-restful/vcp/vcp/: settings.py  urls.py
django_proj/wx_dj/: manage.py
django_proj/wx_dj/test_app/: models.py
django_proj/wx_dj/wx_dj/: asgi.py  settings.py  urls.py  wsgi.py
examples/flink/: streaming.py  wc.py
examples/spark/: utils.py
filelock/: filelock.py  pyproject.toml  test.py
fluentPython/: abc.py  decorators.py  strategy.py
interview/: test01.py
lc-abc/: README.md  main.py  pyproject.toml
lc-abc/lc_abc/tools/: functions.py
llm/: req.txt  utils.py
logger/: mylogger.py
mutiltasking/: coroutine_sample.py  forked.py  multiprocessing_sample.py  multithread_sample.py  queue_sample.py  threading_sample.py  threadpool.py
projects/langchain_playground/: pyproject.toml
projects/wx_common/: Makefile  README.md  pyproject.toml
projects/wx_common/tests/: test_cypher.py
projects/wx_common/tests/llm/: test_llm.py
projects/wx_common/wx_common/: cypher.py  settings.py
projects/wx_common/wx_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/wx_common/wx_common/llm/: __init__.py  agent.py  chat.py
projects/wx_common/wx_common_pyo3/: Cargo.toml
projects/wx_common/wx_common_pyo3/src/: lib.rs
projects/wx_common/wx_common_pyo3/src/utils/: cal.rs  mod.rs  play.rs
projects/wx_dj/: README.md  pyproject.toml
projects/wxabc/: play.py  pyproject.toml
projects/wxabc/tests/: test_generator.py
projects/wxabc/tests/aio/: test_http.py
projects/wxabc/tests/spark/: test_one.py
projects/wxabc/wxabc/: api.py  logger.py  settings.py
projects/wxabc/wxabc/dask-abc/: module.py  run.sh
projects/wxabc/wxabc/lc/: main.py
projects/wxabc/wxabc/lc/lc_abc/: common.py
projects/wxabc/wxabc/lc/lc_abc/tools/: functions.py
projects/wxabc/wxabc/poc/: __init__.py
projects/wxabc/wxabc/testing/: utils.py
projects/wxabc/wxabc/utilities/: cypher.py
py3.6/: Pipfile  Pipfile.lock.orig  Pipfile.orig  app.py  async_demo.py  async_http.py
py3.6/async_guides/: async_demo.py  async_http.py
py3.6/django_proj/: django.md  django.md.orig
py3.6/django_proj/django-restful/: Pipfile
py3.6/django_proj/django-restful/vcp/lottery/: serializers.py  views.py
py3.6/django_proj/django-restful/vcp/lottery/test/: test_models.py
py3.6/django_proj/django-restful/vcp/oauth/: forms.py  urls.py  views.py
py3.6/django_proj/django-restful/vcp/vcp/: settings.py
py3.6/django_proj/vcp/: db.sqlite3
py3.6/django_proj/vcp/nima/: apps.py  middlewares.py  models.py  urls.py  views.py
py3.6/django_proj/vcp/nima/migrations/: 0001_initial.py
py3.6/django_proj/vcp/vcp/: settings.py  settings.py.orig  urls.py  urls.py.orig
py3.6/peewee_test/: bank_sim.py
py3.6/sanic/: app.py  asynchttp_client.py  websocker_app.py  websocker_client.py
python_cookbook/: _string.py  _string2.py  decorator.py  iterators.py
scraper/: Demo01.py  Pipfile  Scraper01.py  Scraper02.py  bs4sample.py  multisave.py  pyjson.py
scraper/kugou/api/: app.py  model.py  scrapers.py
scraper/kugou/api/static/: demo.js
scraper/kugou/api/templates/: aplayer.html
scraper/samples/: kugoo_song_sample.json
spark/: 01_hi_spark.py
stdlib/: cli.py
tests/: test_poc.py
tests/test_utilities/: test_cypher.py
venv2/: Pipfile
venv3/: Pipfile
wxabc/dask-abc/: main.py
wxabc/dask-abc/java/: Counter.java
wxabc/lc/: README.md
