[project]
name = "wxabc"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-openai<0.3",
  "loguru>=0.7.2",
  "pydantic>=2",
  "requests>=2.32.3",
]

[tool.uv]
index-url = "https://mirrors.tencent.com/pypi/simple/"
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-s -vvv"
testpaths = [
    "tests",
]

[project.optional-dependencies]
llm = ["langchain<3"]

