[tool.poetry]
name = "wx-py"
version = "0.1.0"
description = ""
authors = ["Vinceeee <491323832@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
