[tool.poetry]
name = "lc-abc"
version = "0.1.0"
description = "我的langchain-ABC"
authors = ["Vinceeee <491323832@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
streamlit = "^1.35.0"
ipdb = "^0.13.13"
langchainhub = "^0.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
