[project]
name = "wx-common"
version = "0.1.0"
description = "common packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic-settings>=2.6.1",
  "cryptography>=43.0.3",
  "loguru>=0.7",
]

[project.optional-dependencies]
llm = ["langchain~=0.3", "langgraph>=0.2.56", "langchain-openai>=0.2.11"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
dev-dependencies = [
  "ipdb>=0.13.13",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.2",
  "ruff>=0.6.4",
  "maturin>=1.7.8",
  "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
addopts = ["-v", "-s"]
env_files = [".env"]
env_override_existing_values = 1


[tool.ruff]
line-length = 119
force-exclude = true
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I", "PIE", "PERF"]
ignore = ["PERF401", "E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["wx_common"]
# 总是显式制定 import section 的顺序
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
relative-imports-order = "closest-to-furthest"
