[project]
name = "wx-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-ninja>=1.3.0",
    "django~=4.2",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
dev-dependencies = [
  "ipdb>=0.13.13",
  "pytest-asyncio>=0.24.0",
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]
